# whatidid

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
hooks/: check-decisions.sh  search-before-solving.sh  session-summary.sh
migrations/: 001_initial.sql  002_sections.sql  003_timestamps.sql
scripts/: install-hook.sh  search-context.sh
src/: db.rs  main.rs  models.rs  output.rs  repo.rs  search.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
